--- a/app/src/main/res/layout/activity_showmycalendar.xml
+++ b/app/src/main/res/layout/activity_showmycalendar.xml
@@ -4,6 +4,7 @@
     xmlns:support="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@color/sky_blue">>
     tools:context="com.example.mahirhasan.registrationandlogin.ShowmycalendarActivity">
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -13,21 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/sky_blue">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ap"
-            android:layout_marginTop="20dp"
-            android:id="@+id/iii"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/show" />
+        </LinearLayout>
 
-
-    </LinearLayout>
 
 
 
