--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape= "rectangle"  >
     <solid android:color="#cef1e5"/>
-    <stroke android:width="0.5dp"  android:color="#ff9"/>
+    <stroke android:width="0.5dp"  android:color="#797961"/>
 </shape>
