--- a/app/src/main/res/layout/activity_addholidaytables.xml
+++ b/app/src/main/res/layout/activity_addholidaytables.xml
@@ -86,10 +86,10 @@
 
     <Button
         android:text="Back"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:id="@+id/button3"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginTop="480dp"
         android:layout_alignParentEnd="true" />
         />
@@ -100,8 +100,17 @@
         android:layout_marginTop="480dp"
         android:id="@+id/ListButton"
         android:text="List of Holidays"
+        android:layout_marginLeft="2dp"
 
-        android:layout_marginLeft="50dp"
+        />
+    <Button
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="480dp"
+        android:id="@+id/showCalendar"
+        android:text="Show Calendar"
+        android:layout_marginLeft="145dp"
 
         />
 </RelativeLayout>
